2004-05-07  Pascal Obry  <obry@act-europe.fr>

	* include/winsock.h (IN_CLASSA): Fix macro.
	* include/winsock2.h (IN_CLASSA): Fix macro.

2004-04-29  Bart Oldeman  <bartoldeman@users.sourceforge.net>

	* include/objbase.h (STGOPTIONS): Correct pwcsTemplateFile type.
	* include/aclui.h: Remove '\r', throughout.
	* include/msacm.h: Likewise.
	* lib/aclui.def: Likewise.

2004-04-28  Luke Dunstan  <infidel@users.sourceforge.net>

	* lib/comctl32.def (SetWindowSubclass): Add stub.
	Thanks to Eugene <egladysh@users.sourceforge.net>.

2004-04-24  Luke Dunstan  <infidel@users.sourceforge.net>

	* include/winbase.h (EXECUTION_STATE): Add typedef.
	(SetThreadExecutionState): Declare.
	* include/wingdi.h (_WINGDI_): Define.
	* include/objbase.h (_OBJBASE_H_): Define.

2004-04-24  Luke Dunstan  <infidel@users.sourceforge.net>

	* include/winuser.h (SM_IMMENABLED, SM_CXFOCUSBORDER,
	SM_CYFOCUSBORDER, SM_TABLETPC, SM_MEDIACENTER): Add defines.
	(SM_CMETRICS): Adjust value.
	* include/winnt.h (PROCESSOR_ARCHITECTURE_MSIL): Correct define.
	(PROCESSOR_ARCHITECTURE_AMD64, PROCESSOR_ARCHITECTURE_IA32_ON_WIN64):
	Add defines.
	Thanks to Benoit Blanchon <benoit.blanchon@free.fr>

2004-04-24  Justin Forest  <vhex@users.sourceforge.net>

	* include/winsock2.h (LUP_DEEP, LUP_CONTAINERS,
	LUP_NOCONTAINERS, LUP_NEAREST, LUP_RETURN_NAME,
	LUP_RETURN_TYPE, LUP_RETURN_VERSION, LUP_RETURN_COMMENT,
	LUP_RETURN_ADDR, LUP_RETURN_BLOB, LUP_RETURN_ALIASES,
	LUP_RETURN_QUERY_STRING, LUP_RETURN_ALL, LUP_RES_SERVICE,
	LUP_FLUSHCACHE, LUP_FLUSHPREVIOUS): Add defines.

2004-04-24  Luke Dunstan  <infidel@users.sourceforge.net>

	* include/windns.h (DNSREC_QUESTION, DNSREC_ANSWER, DNSREC_AUTHORITY,
	DNSREC_ADDITIONAL): Add defines.

2004-04-23  Robert Wruck  <wruck@tweerlei.de>

	* include/commctrl.h (LPNMLVDISPINFO): Add defines.

2004-04-23  Robert Wruck  <wruck@tweerlei.de>

	* include/aclui.h: New file.
	* lib/aclui.def: New file.
	* lib/test.c: Add aclui.h to includes.
